# luxmobi

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: workflow_ETL.py  workflow_create_tables.py  workflow_example.py  workflow_integration_db.py  workflow_load_csv_data.py  workflow_retrieve_write_data.py  workflow_test_dag.py
dags/custom_operators/: CsvToPostgresOperator.py  MySqlToCsvOperator.py  MySqlToPostgreOperator.py  MySqlToPostgresOperator.py
dags/scripts/: config.py  extract_transform_data.py  gpt_locations.py  load_data.py  retrieve_data.py  transfer_data.py  write_data_postgres.py
dags/scripts/utils/: logs.py
dags/sql/: create_schema.sql
dags/sql/creation_tables/: create_bike_table.sql  create_charging_station_table.sql  create_departure_board_data.sql  create_departure_board_table.sql  create_gpt_table.sql  create_parking_table.sql  create_stops_public_transport_table.sql  create_traffic_counter_table.sql
dags/sql/previous_tables/: gpt_activity_table.sql
docs/: access_to_db.docx  email.docx  ~$cess_to_db.docx
readme-resources/: schema.excalidraw
