[tool.poetry]
name = "luxmobi"
version = "0.1.0"
description = "Base enviroment for luxmobi"
authors = ["Juan Pineda-Jaramillo <juan.pineda@uni.lu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
numpy = "^1.24.3"
requests = "^2.29.0"
pipreqs = "^0.4.13"
selenium = "^4.9.0"
aiohttp = "^3.8.4"
tqdm = "^4.65.0"
aiofiles = "^23.1.0"
twisted = "^22.10.0"
apache-airflow = "2.6.1"
pydantic = "1.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
